# SightSteer

./: .gitignore  README.md
esp32_client/rc_car/: .gitignore  Cargo.toml  sdkconfig.defaults
esp32_client/rc_car/src/: main.rs
remote_control/: hand_recognition.py
server/: Cargo.toml
server/src/: constants.rs  main.rs  test_client.rs
