[package]
name = "rc_car"
version = "0.1.0"
authors = ["AmanPrakash09 <apraka01@student.ubc.ca>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "rc_car"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow = "1.0"
esp-idf-sys = { version = "0.36", features = ["binstart"] }
esp-idf-hal = "0.45.2"
heapless = "0.8"
embedded-hal = "0.2.7"
embedded-svc = "0.28.1"

[build-dependencies]
embuild = "0.33"
